# Advertisement-Prediction-Engine

./: .gitignore  Advertisement Prediction Engine Paper.txt  Dockerfile  README.md  accuracy_improvements_chart.md  content_based_predictor.py  gunicorn.conf.py  model_architecture_diagram.md  paper_figures.html  pyproject.toml  test_types_only.py  workflow_diagram.md
.do/: app.yaml
scripts/: content_based_trainer_313.py
src/audio_features/: __init__.py  audio_extractor.py  audio_features.py  fusion_model.py  main_pipeline.py  transcript_extractor.py  transcript_features.py  types.py  youtube_adapter.py
web_app/: app.py
web_app/static/css/: style.css
web_app/static/js/: script.js
web_app/templates/: index.html
